proclaim-it/tests/ui/fail/no_operator.rs
use proclaim_it::assert_that;

fn main() {
    let x = 42i32;

    assert_that! {
        x
    }
}
